[gd_scene load_steps=25 format=2]

[ext_resource path="res://art/dc0dw0y-6473555f-a449-4ca2-a519-7522693e870e.jpg" type="Texture" id=1]
[ext_resource path="res://scenes/grid.tscn" type="PackedScene" id=2]
[ext_resource path="res://art/screen.png" type="Texture" id=3]
[ext_resource path="res://art/bg_shadow.png" type="Texture" id=4]
[ext_resource path="res://scenes/endless_mode/endless_mode.gd" type="Script" id=5]
[ext_resource path="res://scripts/move_keeper.gd" type="Script" id=6]
[ext_resource path="res://ui/basic_theme.tres" type="Theme" id=7]
[ext_resource path="res://art/tool.png" type="Texture" id=8]
[ext_resource path="res://art/tools_header.png" type="Texture" id=9]
[ext_resource path="res://scripts/score_keeper.gd" type="Script" id=10]
[ext_resource path="res://art/faces/boss_face_away.png" type="Texture" id=11]
[ext_resource path="res://art/faces/protester.png" type="Texture" id=12]
[ext_resource path="res://art/faces/boss_face.png" type="Texture" id=13]
[ext_resource path="res://scenes/DialogueBoxHolder.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/tool.tscn" type="PackedScene" id=15]
[ext_resource path="res://scenes/pieces/fir_piece.tscn" type="PackedScene" id=16]
[ext_resource path="res://scenes/pieces/pine_piece.tscn" type="PackedScene" id=17]
[ext_resource path="res://ui/tool_button_theme.tres" type="Theme" id=18]
[ext_resource path="res://scripts/player_status.gd" type="Script" id=19]
[ext_resource path="res://sounds/start_game.wav" type="AudioStream" id=20]
[ext_resource path="res://scenes/pieces/protester_piece.tscn" type="PackedScene" id=21]
[ext_resource path="res://scenes/pieces/police_piece.tscn" type="PackedScene" id=22]
[ext_resource path="res://scenes/pieces/birch_piece.tscn" type="PackedScene" id=23]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "away",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="endless_mode" type="Node2D"]
script = ExtResource( 5 )
skip_dialogue = true

[node name="player_status" type="Node" parent="."]
script = ExtResource( 19 )

[node name="ToolChangeSound" type="AudioStreamPlayer" parent="player_status"]
stream = ExtResource( 20 )

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
margin_left = -668.0
margin_top = 93.0
margin_right = 1252.0
margin_bottom = 1173.0
texture = ExtResource( 1 )

[node name="BackgroundColor2" type="ColorRect" parent="."]
margin_right = 577.0
margin_bottom = 1027.0
color = Color( 0.4, 0.588235, 0.00784314, 1 )

[node name="shadow" type="TextureRect" parent="BackgroundColor2"]
modulate = Color( 1, 1, 1, 0.784314 )
margin_right = 72.0
margin_bottom = 128.0
rect_scale = Vector2( 8, 8 )
texture = ExtResource( 4 )

[node name="grid" parent="." instance=ExtResource( 2 )]
possible_pieces = [ ExtResource( 23 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 22 ), ExtResource( 21 ) ]

[node name="score_keeper" type="Node" parent="."]
script = ExtResource( 10 )

[node name="destroy_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="collapse_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="refill_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Control" type="Control" parent="."]
margin_right = 576.0
margin_bottom = 1024.0
theme = ExtResource( 7 )

[node name="Header" type="ColorRect" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1024.0
margin_bottom = -847.0
color = Color( 0.00784314, 0.207843, 0.282353, 1 )

[node name="MarginContainer2" type="MarginContainer" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 384.0
margin_top = -1024.0
margin_right = -64.0
margin_bottom = -906.0
rect_scale = Vector2( 1.5, 1.5 )

[node name="score_header" type="RichTextLabel" parent="Control/MarginContainer2"]
margin_right = 128.0
margin_bottom = 40.0
size_flags_vertical = 0
bbcode_enabled = true
bbcode_text = "[center]SCORE[/center]"
text = "SCORE"
fit_content_height = true

[node name="Screen2" type="Sprite" parent="Control"]
modulate = Color( 0.137255, 0.137255, 0.137255, 1 )
position = Vector2( 483, 111 )
rotation = 3.14159
scale = Vector2( 1.25, -1 )
texture = ExtResource( 3 )

[node name="Tool_0" type="Sprite" parent="Control"]
visible = false
position = Vector2( 382, 174 )
texture = ExtResource( 8 )

[node name="Tool_1" type="Sprite" parent="Control"]
visible = false
position = Vector2( 582, 174 )
texture = ExtResource( 8 )

[node name="Tool_2" type="Sprite" parent="Control"]
visible = false
position = Vector2( 782, 174 )
texture = ExtResource( 8 )

[node name="ToolsHeader" type="Sprite" parent="Control"]
visible = false
position = Vector2( 586, 62 )
texture = ExtResource( 9 )

[node name="score" type="RichTextLabel" parent="Control"]
margin_left = 289.0
margin_top = 83.0
margin_right = 545.0
margin_bottom = 123.0
rect_scale = Vector2( 1.5, 1.5 )
size_flags_vertical = 4
bbcode_enabled = true
bbcode_text = "[center]10000[/center]"
text = "10000"
fit_content_height = true

[node name="Footer" type="ColorRect" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -174.0
margin_bottom = 3.0
color = Color( 0.00784314, 0.207843, 0.282353, 1 )

[node name="MarginContainer" type="MarginContainer" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 328.0
margin_top = -174.0
margin_right = -82.0
margin_bottom = -56.0
rect_scale = Vector2( 1.5, 1.5 )

[node name="RichTextLabel" type="RichTextLabel" parent="Control/MarginContainer"]
margin_right = 166.0
margin_bottom = 40.0
size_flags_vertical = 0
bbcode_enabled = true
bbcode_text = "[center]TOOLS[/center]"
text = "TOOLS"
fit_content_height = true

[node name="Tool_3" type="Sprite" parent="Control"]
visible = false
position = Vector2( 287, 937 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="Tool_4" type="Sprite" parent="Control"]
visible = false
position = Vector2( 384, 951 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 3 )

[node name="Tool_5" type="Sprite" parent="Control"]
visible = false
position = Vector2( 487, 937 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="ToolsHeader2" type="Sprite" parent="Control"]
visible = false
position = Vector2( 389, 881 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )

[node name="tool_saw" parent="Control" instance=ExtResource( 15 )]
position = Vector2( 450, 950 )

[node name="Developer" type="AnimatedSprite" parent="Control"]
position = Vector2( 103, 938 )
frames = SubResource( 1 )

[node name="developer_button" type="Button" parent="Control/Developer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -121.0
margin_top = -122.0
margin_right = -3.0
margin_bottom = -1.0
theme = ExtResource( 18 )

[node name="Protester" type="Sprite" parent="Control"]
visible = false
position = Vector2( 103, 938 )
texture = ExtResource( 12 )

[node name="DialogueBoxHolder" parent="Control" instance=ExtResource( 14 )]
position = Vector2( 15, 524 )

[node name="DialogueBox" parent="Control/DialogueBoxHolder" index="0"]
dialogue_path = "res://dialogue/endless_mode/endless_mode_info.json"

[node name="input_blocker" parent="Control/DialogueBoxHolder/DialogueBox" index="0"]
margin_left = -993.0
margin_top = -1001.0
margin_right = 1007.0
margin_bottom = 999.0

[node name="Name" parent="Control/DialogueBoxHolder/DialogueBox" index="3"]
margin_left = 266.0
margin_right = 354.0
custom_colors/default_color = Color( 0.847059, 0.768627, 0.811765, 1 )
bbcode_text = "DEVELOPER"
text = "DEVELOPER"

[node name="Text" parent="Control/DialogueBoxHolder/DialogueBox" index="4"]
custom_colors/default_color = Color( 0.847059, 0.768627, 0.811765, 1 )

[node name="Screen" type="Sprite" parent="Control"]
visible = false
position = Vector2( 103, 939 )
texture = ExtResource( 3 )

[node name="continue_game" type="Control" parent="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Control/continue_game"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 63.0
margin_top = 573.0
margin_right = -63.0
margin_bottom = -191.0
color = Color( 0.172549, 0.192157, 0.215686, 1 )

[node name="stay" type="Button" parent="Control/continue_game"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -156.5
margin_top = 103.5
margin_bottom = 142.5
rect_scale = Vector2( 2, 2 )
text = "stay here"

[node name="continue" type="Button" parent="Control/continue_game"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -147.0
margin_top = 209.0
margin_bottom = 248.0
rect_scale = Vector2( 2, 2 )
text = "move on"

[node name="input_blocker" type="Control" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -172.0

[node name="ColorRect" type="ColorRect" parent="Control/input_blocker"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0 )

[node name="MarginContainer3" type="MarginContainer" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = -1024.0
margin_right = -452.0
margin_bottom = -905.0
rect_scale = Vector2( 1.5, 1.5 )

[node name="timer_header" type="RichTextLabel" parent="Control/MarginContainer3"]
margin_right = 112.0
margin_bottom = 40.0
size_flags_vertical = 0
bbcode_enabled = true
bbcode_text = "[center]MOVES[/center]"
text = "MOVES"
fit_content_height = true

[node name="Screen3" type="Sprite" parent="Control"]
modulate = Color( 0.137255, 0.137255, 0.137255, 1 )
position = Vector2( 97, 111 )
rotation = 3.14159
scale = Vector2( 1.25, 1 )
texture = ExtResource( 3 )

[node name="timer_text" type="RichTextLabel" parent="Control"]
margin_left = 22.0
margin_top = 83.0
margin_right = 120.0
margin_bottom = 123.0
rect_scale = Vector2( 1.5, 1.5 )
size_flags_vertical = 4
bbcode_enabled = true
bbcode_text = "[center]∞[/center]"
text = "∞"
fit_content_height = true

[node name="countdown_timer" type="Timer" parent="Control/timer_text"]
one_shot = true

[node name="moves_text" type="RichTextLabel" parent="Control"]
visible = false
margin_left = 22.0
margin_top = 83.0
margin_right = 120.0
margin_bottom = 123.0
rect_scale = Vector2( 1.5, 1.5 )
size_flags_vertical = 4
bbcode_enabled = true
bbcode_text = "[center]∞[/center]"
text = "∞"
fit_content_height = true

[node name="countdown_timer" type="Timer" parent="Control/moves_text"]
one_shot = true

[node name="grid_pauser" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="move_keeper" type="Node" parent="."]
script = ExtResource( 6 )

[node name="shadow" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.0980392 )
margin_right = 72.0
margin_bottom = 128.0
rect_scale = Vector2( 8, 8 )
mouse_filter = 2
texture = ExtResource( 4 )

[connection signal="match_made" from="grid" to="." method="_on_grid_match_made"]
[connection signal="swap_succesful" from="grid" to="move_keeper" method="_on_grid_swap_succesful"]
[connection signal="pressed" from="Control/Developer/developer_button" to="." method="_on_developer_button_pressed"]
[connection signal="dialog_box_closed" from="Control/DialogueBoxHolder/DialogueBox" to="." method="_on_DialogueBox_dialog_box_closed"]
[connection signal="dialog_box_closed" from="Control/DialogueBoxHolder/DialogueBox" to="Control/Developer" method="_on_DialogueBox_dialog_box_closed"]
[connection signal="moves_deplenished" from="move_keeper" to="." method="_on_move_keeper_moves_deplenished"]

[editable path="Control/tool_saw"]
[editable path="Control/DialogueBoxHolder"]
